# zao-an

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: health-check.yml  notify-failure.yml  send-email.yml  test-newsletter.yml
.hydra/: config.yaml  hydra.yaml
conf/: config-github.yaml  config.yaml  logging.yaml
keys/: credentials.json  token.json
scripts/: debug-secrets.sh  setup-github-secrets.sh  test-pdf-attachments.py  test-setup.sh  validate-credentials.py
src/: api_clients.py  api_google_places.py  gmail_service.py  utils.py
src/email_templates/: digest.html  digest.txt
templates/: newsletter.html  newsletter.txt  newsletter_flex.html  newsletter_tables.html
