[project]
name = "zao-an"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.4",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "geopy>=2.4.1",
    "google-api-python-client>=2.176.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "hydra-core>=1.3.2",
    "jinja2>=3.1.6",
    "lxml>=6.0.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "tdqm>=0.0.1",
]
